MusicChatBlockView: Handle all 3 types of chat by looking up the appropriate  block. RewriteServlet chatwindow-disabled.jsp: Get rid of separate cut-and-paste  of chatwindow for XMPP-disabled, just build it into the normal chatwindow.jsp css2/chatwindow* jsp2/chatwindow*: Remove the old chatwindow implementation

--- a/dumbhippo/trunk/server/web/css3/chatwindow-positions.css
+++ b/dumbhippo/trunk/server/web/css3/chatwindow-positions.css
@@ -108,3 +108,9 @@ body {
 	padding-right: 4px;
 	padding-bottom: 3px;
 }
+
+.dh-disabled-table {
+   table-layout: fixed;
+   width: 100%;
+   height: 100%;
+}
