--- a/dumbhippo/trunk/client/windows/WiXInstaller/DumbHippo.wxs
+++ b/dumbhippo/trunk/client/windows/WiXInstaller/DumbHippo.wxs
@@ -1,10 +1,10 @@
 <?xml version="1.0"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2003/01/wi">
-    <Product Id="AEB57CA0-70B0-44C1-8CC5-DD9EA3E86E50"
+    <Product Id="97501B4C-BE89-44f3-8C7A-6BC3CDAE070A"
             UpgradeCode="9A9721CB-6D56-478C-9AEE-2AAC1D75BA2F"
             Name="Mugshot" 
             Language="1033"
-            Version="1.1.84"
+            Version="1.1.85"
             Manufacturer="Red Hat">
         <Package Id="????????-????-????-????-????????????"
                 Description="Mugshot client software" 
@@ -21,8 +21,9 @@
         <Property Id="ARPPRODUCTICON" Value="hippoIcon"/>
         
         <Upgrade Id="9A9721CB-6D56-478C-9AEE-2AAC1D75BA2F">
-            <UpgradeVersion Minimum="0" Maximum="1.1.84" Property="DHPREVIOUSVERSIONS"/>
-            <UpgradeVersion Minimum="1.1.84" IncludeMinimum="yes" Property="DHNEWERVERSIONS"/>
+            <UpgradeVersion Minimum="0" Maximum="1.1.85" Property="DHPREVIOUSVERSIONS"/>
+            <UpgradeVersion Minimum="1.1.85" Maximum="1.1.85" Property="DHSAMELICENSE"/>
+            <UpgradeVersion Minimum="1.1.85" IncludeMinimum="yes" Property="DHNEWERVERSIONS"/>
         </Upgrade>
 
         <!-- Separate "cabinets" would be used if you broke the installer across floppies ... -->
@@ -74,7 +75,7 @@
      
     <InstallUISequence>
         <Show Dialog="NotAdminPage" After="CostFinalize">NOT Privileged</Show>
-        <Show Dialog="WelcomePage" After="NotAdminPage">NOT DHPREVIOUSVERSIONS</Show>
+        <Show Dialog="WelcomePage" After="NotAdminPage">NOT DHSAMELICENSE</Show>
         <Show Dialog="ProgressPage" After="WelcomePage">NOT DHPREVIOUSVERSIONS</Show>
         <Show Dialog="UpgradeProgressPage" After="ProgressPage">DHPREVIOUSVERSIONS</Show>
         <Show Dialog="FatalErrorPage" OnExit="error"/>
