hippoControl.idl hippoControl.{cpp,h}: Add a "version" property to hippoIControl control.js: Expose the version property of the IE/Firefox controls chatwindow.{js,jsp,css}: Check the version and display a message   if necessary telling people to exit Firefox and try again.

--- a/dumbhippo/trunk/server/web/css3/chatwindow.css
+++ b/dumbhippo/trunk/server/web/css3/chatwindow.css
@@ -56,3 +56,10 @@ body {
    font-size: 15px;
    color:     #444444;
 }
+
+.dh-too-old-message {
+   font-size:  15px;
+   color:      #444444;
+   text-align: left;
+   width:      80%;
+}
