--- a/dumbhippo/trunk/client/windows/WiXInstaller/Components.wxs
+++ b/dumbhippo/trunk/client/windows/WiXInstaller/Components.wxs
@@ -112,6 +112,7 @@
 	                    <File Id="lidPng"            Name="lid.png"      LongName="lid.png"            src="images\lid.png"            DiskId="1" Vital="yes"/>
 	                    <File Id="lockIconPng"       Name="lock_ico.png" LongName="lock_icon.png"      src="images\lock_icon.png"      DiskId="1" Vital="yes"/>
 	                    <File Id="mugshotstackerPng" Name="mugshots.png" LongName="mugshotstacker.png" src="images\mugshotstacker.png" DiskId="1" Vital="yes"/>
+                        <File Id="netflixNoImagePng" Name="netflixn.png" LongName="netflix_no_image.png" src="images\netflix_no_image.png" DiskId="1" Vital="yes"/>
 	                    <File Id="noartPng"          Name="noart.png"    LongName="noart.png"          src="images\noart.png"          DiskId="1" Vital="yes"/>
 	                    <File Id="nophotoPng"        Name="nophoto.png"  LongName="nophoto.png"        src="images\nophoto.png"        DiskId="1" Vital="yes"/>
 	                    <File Id="photoIconPng"      Name="photo_ic.png" LongName="photo_icon.png"     src="images\photo_icon.png"     DiskId="1" Vital="yes"/>
