Framer quick fixes:  - Remove chatting user count  - Change "Join Chat" to "Quips and Comments"  - Track all users uniformly, whether visitor or participant  - Add timestamps

--- a/dumbhippo/trunk/server/web/css2/framer.css
+++ b/dumbhippo/trunk/server/web/css2/framer.css
@@ -357,6 +357,10 @@ a.dh-framer-title {
 	color: #fff500;
 }
 
+.dh-chat-message-time {
+	color: #ffccaa;
+}
+
 #dhPostViewingList {
 	position:	absolute;
 	top:		6px;
