--- a/dumbhippo/trunk/client/windows/WiXInstaller/DumbHippo.wxs
+++ b/dumbhippo/trunk/client/windows/WiXInstaller/DumbHippo.wxs
@@ -1,10 +1,10 @@
 <?xml version="1.0"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2003/01/wi">
-    <Product Id="AF8204C6-A62D-4c95-AEDD-9B5D16C8489A"
+    <Product Id="323604A4-DC41-487e-803B-CA649D101A23"
             UpgradeCode="9A9721CB-6D56-478C-9AEE-2AAC1D75BA2F"
             Name="Mugshot" 
             Language="1033"
-            Version="1.1.86"
+            Version="1.1.87"
             Manufacturer="Red Hat">
         <Package Id="????????-????-????-????-????????????"
                 Description="Mugshot client software" 
@@ -21,9 +21,9 @@
         <Property Id="ARPPRODUCTICON" Value="hippoIcon"/>
         
         <Upgrade Id="9A9721CB-6D56-478C-9AEE-2AAC1D75BA2F">
-            <UpgradeVersion Minimum="0" Maximum="1.1.86" Property="DHPREVIOUSVERSIONS"/>
-            <UpgradeVersion Minimum="1.1.85" Maximum="1.1.86" Property="DHSAMELICENSE"/>
-            <UpgradeVersion Minimum="1.1.86" IncludeMinimum="yes" Property="DHNEWERVERSIONS"/>
+            <UpgradeVersion Minimum="0" Maximum="1.1.87" Property="DHPREVIOUSVERSIONS"/>
+            <UpgradeVersion Minimum="1.1.0" Maximum="1.1.87" Property="DHSAMELICENSE"/>
+            <UpgradeVersion Minimum="1.1.87" IncludeMinimum="yes" Property="DHNEWERVERSIONS"/>
         </Upgrade>
 
         <!-- Separate "cabinets" would be used if you broke the installer across floppies ... -->
@@ -49,8 +49,9 @@
         <ComponentRef Id="loudmouth" />
         <ComponentRef Id="images" />
         <ComponentRef Id="pangoConfiguration" />
-        <MergeRef Id="visualStudioRuntime" />
-        <MergeRef Id="visualStudioRuntimePolicy" />
+        <!-- We're static linking for now -->
+        <!-- <MergeRef Id="visualStudioRuntime" /> -->
+        <!-- <MergeRef Id="visualStudioRuntimePolicy" /> -->
     </Feature>
     
     <CustomAction Id="DhQuitApp" FileKey="mugshotExe" Return="ignore" ExeCommand="--quit"/> 
