--- a/dumbhippo/trunk/server/web/css3/applications-positions.css
+++ b/dumbhippo/trunk/server/web/css3/applications-positions.css
@@ -55,6 +55,10 @@
 	clear: both;
 }
 
+.dh-applications-categories {
+	padding-left: 12px;
+}
+
 .dh-applications-category-name {
 	padding-right: 9px;
 }
