--- a/dumbhippo/trunk/server/web/css3/applications-positions.css
+++ b/dumbhippo/trunk/server/web/css3/applications-positions.css
@@ -75,3 +75,10 @@
 .dh-applications-category-bar {
 	height: 10px;
 }
+
+#dhApplicationsEnableBusy {
+	display: block;
+	position: absolute;
+	bottom: 10px;
+	right: 10px;
+}
