Add simple application-statistics preference to the account page (rest of commit...)

--- a/dumbhippo/trunk/server/web/css3/account-iefixes.css
+++ b/dumbhippo/trunk/server/web/css3/account-iefixes.css
@@ -10,12 +10,12 @@
     bottom:    4px;
 }
 
-#dhMusicRadarPreferences label {
+.dh-acount-preferences-row label {
     bottom:   0px;
     width:    20px;
 }
 
-#dhMusicRadarPreferences #dhMusicOn, #dhMusicRadarPreferences #dhMusicOff {
+.dh-acount-preferences-row input {
     bottom:   0px;
 }
 
