--- a/dumbhippo/trunk/server/web/css3/account-positions.css
+++ b/dumbhippo/trunk/server/web/css3/account-positions.css
@@ -27,12 +27,12 @@
     margin-right:    5px;
 }
 
-#dhMusicRadarPreferences label {
+.dh-account-preferences-row label {
     position: relative;
     bottom:   -1px;
 }
 
-#dhMusicRadarPreferences #dhMusicOn, #dhMusicRadarPreferences #dhMusicOff {
+.dh-account-preferences-row input {
     position: relative;
     bottom:   2px;
 }
