Miscellaneous changes from previous commits that got missed  - Use the categories tag on the main page  - CSS changes for the application page

--- a/dumbhippo/trunk/server/web/css3/applications-positions.css
+++ b/dumbhippo/trunk/server/web/css3/applications-positions.css
@@ -5,11 +5,16 @@
 	padding-right: 56px;
 }
 
-#dhApplicationsApplications {
+#dhApplicationsRight {
 	float: left;
 }
 
 .dh-applications-heading {
+	margin-bottom: 7px;
+}
+
+.dh-applications-subheading {
+	margin-top: 10px;
 	margin-bottom: 7px;
 }
 
@@ -30,22 +35,42 @@
 
 .dh-applications-application-stats-outer {
 	float: left;
+}
+
+#dhApplicationsApplications .dh-applications-application-stats-outer {
 	width: 104px;
 }
 
-.dh-applications-application-stats {
+#dhApplicationsRelated .dh-applications-application-stats-outer {
+	width: 35px;
+}
+
+#dhApplicationsApplications .dh-applications-application-stats {
 	position: relative;
 	left: 12px;
 	width: 80px;
 }
 
+#dhApplicationsRelated .dh-applications-application-stats {
+	position: relative;
+	left: 5px;
+	width: 25px;
+}
+
 .dh-applications-application-icon {
-	width: 62px;
 	float: left;
 	text-align: center;
 }
 
-.dh-applications-application-details {
+#dhApplicationsApplications .dh-applications-application-icon {
+	width: 62px;
+}
+
+#dhApplicationsRelated .dh-applications-application-icon {
+	width: 31px;
+}
+
+#dhApplicationsApplications .dh-applications-application-details {
 	position: relative;
 	left: 6px;
 	top: 6px;
