--- a/dumbhippo/trunk/server/web/css3/features.css
+++ b/dumbhippo/trunk/server/web/css3/features.css
@@ -7,27 +7,27 @@
 	font-size:	  		16px;
 }
 
+.dh-features-footer {
+	color:				black;
+	font-size:	  		18px;
+}
+
+.dh-features-footer a {
+	font-weight:  		bold;
+}
+
 .dh-features-list-header {
-	color:				#9648BC;
+	color:				black;
 	font-size:	  		14px;
 	font-weight:		bold;
 }
 
-.dh-features-list-content {
-	font-size:			12px;
-}
-
-.dh-features-list-text {
+.dh-features-list-text, .dh-features-list-summary {
 	color:				#666666;
-	text-decoration:	underline;
+	font-size:	  		14px;
 }
 
 .dh-features-list-tip {
 	border:				2px solid gray;
 	background-color:	white;
 }
-
-.dh-features-list a {
-    text-decoration:    underline;
-}
-
