- Switch application-usage queries over to HQL so we can mark them   cacheable (caching doesn't work well with Native SQL queries) - Enable the hibernate persistence cache - Add cache annotations to Application and ApplicationIcon - Tagify the left and top parts of the application pages - Add "Your Application Usage" to the application pages - Add an extra index to ApplicationUsage to optimize the   "my/your applications" lookup. - Send out an <initialApplicationBurst/> message when a user turns   on application tracking so that we upload data quickly for the   first hour.

--- a/dumbhippo/trunk/server/web/css3/applications.css
+++ b/dumbhippo/trunk/server/web/css3/applications.css
@@ -23,15 +23,15 @@
 	text-align: center; 
 }
 
-#dhApplicationApplications .dh-applications-application-stats {
+#dhApplicationsApplications .dh-applications-application-stats {
 	background: url("/images3/purple_gradient.png") top left repeat-x;
 }
 
-#dhApplicationApplications .dh-applications-rank {
+#dhApplicationsApplications .dh-applications-rank {
 	font-size: 24px;
 }
 
-#dhApplicationRelatd .dh-applications-rank {
+.dh-mini-applications .dh-applications-rank {
 	font-size: 16px;
 }
 
