--- a/dumbhippo/trunk/server/web/css3/applications-positions.css
+++ b/dumbhippo/trunk/server/web/css3/applications-positions.css
@@ -1,6 +1,6 @@
 @CHARSET "UTF-8";
 
-#dhApplicationsCategories {
+#dhApplicationsLeft {
 	float: left;
 	padding-right: 56px;
 }
@@ -41,7 +41,7 @@
 	width: 104px;
 }
 
-#dhApplicationsRelated .dh-applications-application-stats-outer {
+.dh-mini-applications .dh-applications-application-stats-outer {
 	width: 35px;
 }
 
@@ -51,7 +51,7 @@
 	width: 80px;
 }
 
-#dhApplicationsRelated .dh-applications-application-stats {
+.dh-mini-applications .dh-applications-application-stats {
 	position: relative;
 	left: 5px;
 	width: 25px;
@@ -66,7 +66,7 @@
 	width: 62px;
 }
 
-#dhApplicationsRelated .dh-applications-application-icon {
+.dh-mini-applications .dh-applications-application-icon {
 	width: 31px;
 }
 
@@ -86,6 +86,7 @@
 
 .dh-applications-categories {
 	padding-left: 12px;
+	padding-bottom: 12px;
 }
 
 .dh-applications-category-name {
