--- a/dumbhippo/trunk/server/web/css3/site-positions.css
+++ b/dumbhippo/trunk/server/web/css3/site-positions.css
@@ -517,6 +517,10 @@ div.dh-person-header {
     padding-top:	8px;
 }
 
+.dh-person-header-left {
+    margin-bottom:  4px;
+}
+
 div.dh-person-header-title {
 }
 
