Gracefully handle the "no data yet case" for "Your Application Usage"

--- a/dumbhippo/trunk/server/web/css3/applications.css
+++ b/dumbhippo/trunk/server/web/css3/applications.css
@@ -82,3 +82,8 @@
 	background-color:	#fbfadc;
 	border:				1px solid #cccc99;
 }
+
+.dh-applications-no-data {
+    font-size:  18px;
+    color:      #444444;
+}
